--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
+    "animate.css": "^4.1.1",
     "date-fns": "^2.21.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-15": "^1.4.3",
